logs/c2.patch.japanese.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter'...
Compiling './lib/python3.5/site-packages/Products/BigramSplitter/BigramSplitter.py'...
***   File "./lib/python3.5/site-packages/Products/BigramSplitter/BigramSplitter.py", line 43
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/BigramSplitter/Extensions'...
Compiling './lib/python3.5/site-packages/Products/BigramSplitter/Extensions/._Install.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/Products/BigramSplitter/config.py'...
***   File "./lib/python3.5/site-packages/Products/BigramSplitter/config.py", line 39
    rx_all = re.compile(ur"[%s]"%allp, re.UNICODE)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/BigramSplitter/docs'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/profiles'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/profiles/default'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/profiles/remove'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/skins'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/skins/BigramSplitter'...
Listing './lib/python3.5/site-packages/Products/BigramSplitter/tests'...
Listing './lib/python3.5/site-packages/Products.BigramSplitter-1.0.egg-info'...
Listing './lib/python3.5/site-packages/c2'...
Listing './lib/python3.5/site-packages/c2/patch'...
Listing './lib/python3.5/site-packages/c2/patch/plone3mail'...
Compiling './lib/python3.5/site-packages/c2/patch/plone3mail/HotfixSecureMailHost.py'...
***   File "./lib/python3.5/site-packages/c2/patch/plone3mail/HotfixSecureMailHost.py", line 77
    raise MailHostError, 'Invalid email address: %s' % addr
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/c2.patch.japanese-0.1.egg-info'...
Listing './lib/python3.5/site-packages/c2.patch.plone3mail-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
